fix: prices aligned

--- a/src/pages/ConfirmPayment/index.css
+++ b/src/pages/ConfirmPayment/index.css
@@ -2,3 +2,12 @@
   max-width: 350px;
   margin: 0 auto;
 }
+
+.vertical-linear-stepper-container .MuiBox-root {
+  max-width: none;
+}
+
+.vertical-linear-stepper-container .MuiStepLabel-label {
+  display: flex;
+  justify-content: space-between;
+}
